[feat] add ffmpeg to compress video

--- a/orbbec_camera/CMakeLists.txt
+++ b/orbbec_camera/CMakeLists.txt
@@ -26,6 +26,7 @@ set(dependencies
   camera_info_manager
   image_transport
   image_publisher
+  ffmpeg_image_transport
   OpenCV
   orbbec_camera_msgs
   rclcpp
