--- a/orbbec_camera/package.xml
+++ b/orbbec_camera/package.xml
@@ -13,6 +13,7 @@
   <depend>ament_index_cpp</depend>
   <depend>image_transport</depend>
   <depend>image_publisher</depend>
+  <depend>ffmpeg_image_transport</depend>
   <depend>rclcpp_components</depend>
   <depend>cv_bridge</depend>
   <depend>backward_ros</depend>
